--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,7 @@
                         <a class="nav-link" href="{{ url_for('course_catalog') }}">Course Catalog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('add_course') }}">Add a Course</a>
-                    </li>
+                        <a class="nav-link" href="{{ url_for('add_course') }}">Add Course</a>
                 </ul>
             </div>
         </div>
