--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,27 +2,10 @@
 {% block content %}
 <h1>Contact Us</h1>
 <p>
-    Instructor: 
-    <a href="mailto:singh.mayank@iitgn.ac.in">Mayank Singh</a> (email: singh.mayank@iitgn.ac.in)
+    
+    <a href="mailto:23110128@iitgn.ac.in">Harinarayan J</a>
     <br><br>
-    Class Schedule: K1, Monday 15:30 - 16:50<br>
-    Location: AB 10/201
-    <br><br>
-    Lab Schedule: J2, M2, Friday 14:00 - 15:20, 15:30 - 16:50<br>
-    Location: AB 10/104
-    <br><br>
-    Communication Google group: 
-    <a href="mailto:cs203-2024.pvtgroup@iitgn.ac.in">cs203-2024.pvtgroup@iitgn.ac.in</a>
-    <br><br>
-    Google Classroom: 
-    <a href="https://classroom.google.com" target="_blank">CS 203 Google Classroom</a> - join this classroom for class-related communication.
+    <a href="mailto:23110363@iitgn.ac.in">Vyomika Vasireddy</a>
 </p>
 
-<p>Teaching Assistants:</p>
-<ul>
-    <li><a href="mailto:himanshubeniwal@iitgn.ac.in">Himanshu Beniwal</a> (himanshubeniwal@iitgn.ac.in)</li>
-    <li><a href="mailto:eshwar.dhande@iitgn.ac.in">Eshwar Dhande</a> (eshwar.dhande@iitgn.ac.in)</li>
-    <li><a href="mailto:aamod.thakur@iitgn.ac.in">Aamod Thakur</a> (aamod.thakur@iitgn.ac.in)</li>
-    <li><a href="mailto:24210086@iitgn.ac.in">Sailesh Panda</a> (24210086@iitgn.ac.in)</li>
-</ul>
 {% endblock %}
